--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile "joda-time:joda-time:2.2"
+    compile "org.springframework.boot:spring-boot:1.2.5.RELEASE"
+    compile "org.springframework.boot:spring-boot-autoconfigure:1.2.5.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-web:1.2.5.RELEASE"
 }
 // end::dependencies[]
 
