--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
-apply plugin: 'java'
-apply plugin: 'application'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE')
+        classpath('se.transmode.gradle:gradle-docker:1.2')
+    }
+}
 
-mainClassName = 'hello.HelloWorld'
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'spring-boot'
+apply plugin: 'docker'
+
+group = 'weltn24'
 
 // tag::repositories[]
 repositories {
@@ -11,7 +23,7 @@ repositories {
 
 // tag::jar[]
 jar {
-    baseName = 'gs-gradle'
+    baseName = 'gs-spring-boot-docker'
     version =  '0.1.0'
 }
 // end::jar[]
@@ -25,15 +37,25 @@ dependencies {
     compile "org.springframework.boot:spring-boot:1.2.5.RELEASE"
     compile "org.springframework.boot:spring-boot-autoconfigure:1.2.5.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-web:1.2.5.RELEASE"
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 // end::dependencies[]
 
+task buildDocker(type: Docker, dependsOn: build) {
+    push = true
+    applicationName = jar.baseName
+    dockerfile = file('src/main/docker/Dockerfile')
+    doFirst {
+        copy {
+            from jar
+            into stageDir
+        }
+    }
+}
 // tag::wrapper[]
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '2.12'
 }
 
 // end::wrapper[]
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
