--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,4 +2,5 @@ FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
 ADD gs-spring-boot-docker-0.1.0.jar app.jar
 RUN sh -c 'touch /app.jar'
+EXPOSE 8080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
