add wercker.yml first draft without docker

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 task buildDocker(type: Docker, dependsOn: build) {
     push = true
-    applicationName = jar.baseName
+    applicationName = jar
     dockerfile = file('src/main/docker/Dockerfile')
     doFirst {
         copy {
