--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,10 @@ box:
 build:
     steps:
         - script:
+            # Install Gradle
+            sudo add-apt-repository ppa:cwchien/gradle -y
+            sudo apt-get update
+            sudo apt-get install gradle -y
             name: Show base information
             code: |
                 gradle -v
