--- a/wercker.yml
+++ b/wercker.yml
@@ -1,14 +1,15 @@
-box: mihkels/java8-oracle@0.0.1
-
+box:
+    id: java:8u66-jdk
+    env:
+        GRADLE_USER_HOME: $WERCKER_CACHE_DIR
 build:
     steps:
         - script:
             name: Show base information
             code: |
-                gradle -v
                 java -version
                 javac -version
         - script:
             name: Run gradle
             code: |
-                gradle --full-stackstrace -q --poject-cache-dir=$WERCKER_CACHE_DIR assamble
+                ./gradlew --full-stacktrace clean check
