--- a/wercker.yml
+++ b/wercker.yml
@@ -23,5 +23,4 @@ build:
       password: $DOCKER_PASS
       repository: sandra/hello_world
       ports: 8080
-      entrypoint: ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
-      cmd: bin/bash
+      entrypoint: java -jar gs-spring-boot-docker-0.1.0.jar
