--- a/wercker.yml
+++ b/wercker.yml
@@ -23,4 +23,4 @@ build:
       password: $DOCKER_PASS
       repository: sandra/hello_world
       ports: 8080
-      entrypoint: java -jar gs-spring-boot-docker-0.1.0.jar
+      cmd: java -jar gs-spring-boot-docker-0.1.0.jar
