--- a/wercker.yml
+++ b/wercker.yml
@@ -20,7 +20,7 @@ build:
     # dockerize it
     - internal/docker-push:
       username: $DOCKER_USER
-      password: $DOCKER_PASS
+      password: $DOCKER_PASSWORD
       repository: sandra/hello_world
       ports: 8080
       cmd: java -jar gs-spring-boot-docker-0.1.0.jar
