--- a/wercker.yml
+++ b/wercker.yml
@@ -23,4 +23,4 @@ build:
       password: $DOCKER_PASSWORD
       repository: sandra/hello_world
       ports: 8080
-      cmd: java -jar build/libs/gs-spring-boot-docker-0.1.0.jar
+      cmd: /bin/sh
