--- a/wercker.yml
+++ b/wercker.yml
@@ -17,6 +17,12 @@ build:
         name: gradle build
         code: |
           ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
+    # find the file
+    -script:
+        name: find jar-file
+        code: |
+          ls -lah pipeline/build/libs/gs-spring-boot-docker-0.1.0.jar
+          find .
     # dockerize it
     - internal/docker-push:
       username: $DOCKER_USER
