--- a/wercker.yml
+++ b/wercker.yml
@@ -19,7 +19,7 @@ build:
           ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
     # find the file
     -script:
-        name: find jar-file
+        name: find jar file
         code: |
           ls -lah pipeline/build/libs/gs-spring-boot-docker-0.1.0.jar
           find .
