--- a/wercker.yml
+++ b/wercker.yml
@@ -21,6 +21,7 @@ build:
     - script:
         name: find jar file
         code: |
+          ls -lah ./build/libs/gs-spring-boot-docker-0.1.0.jar
           find .
     # dockerize it
     - internal/docker-push:
