--- a/wercker.yml
+++ b/wercker.yml
@@ -21,8 +21,7 @@ build:
     - script:
         name: find jar file
         code: |
-          ls -lah ./build/libs/gs-spring-boot-docker-0.1.0.jar
-    # dockerize it
+          docker run --entrypoint=/bin/bash sandra/hello_world    # dockerize it
     - internal/docker-push:
       username: $DOCKER_USER
       password: $DOCKER_PASSWORD
