--- a/wercker.yml
+++ b/wercker.yml
@@ -21,10 +21,11 @@ build:
     - script:
         name: find jar file
         code: |
-          docker run --entrypoint=/bin/bash sandra/hello_world    # dockerize it
+          ls -lah pipeline/source/build/libs/gs-spring-boot-docker-0.1.0.jar
+    # dockerize it
     - internal/docker-push:
       username: $DOCKER_USER
       password: $DOCKER_PASSWORD
       repository: sandra/hello_world
       ports: 8080
-      cmd: java -jar ./build/libs/gs-spring-boot-docker-0.1.0.jar
+      cmd: java -jar pipeline/source/build/libs/gs-spring-boot-docker-0.1.0.jar
