--- a/wercker.yml
+++ b/wercker.yml
@@ -17,12 +17,7 @@ build:
         name: gradle build
         code: |
           ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
-    # find the file
-    - script:
-        name: find jar file
-        code: |
-          ls -lah /pipeline/source/build/libs/gs-spring-boot-docker-0.1.0.jar
-    # dockerize it
+    # dockerize it: It is important that you use the absolute path as wercker path != docker path
     - internal/docker-push:
       username: $DOCKER_USER
       password: $DOCKER_PASSWORD
