--- a/wercker.yml
+++ b/wercker.yml
@@ -23,4 +23,4 @@ build:
       password: $DOCKER_PASSWORD
       repository: sandra/hello_world
       ports: 8080
-      cmd: java -jar '/pipeline/source/build/libs/gs-spring-boot-docker-*.jar'
+      cmd: java -jar /pipeline/source/build/libs/gs-spring-boot-docker-${version}.jar
