--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ task buildDocker(type: Docker, dependsOn: build) {
             from jar
             into stageDir
         }
+        println("$NEW_RELIC")
     }
 }
 // tag::wrapper[]
