--- a/wercker.yml
+++ b/wercker.yml
@@ -29,4 +29,5 @@ build:
       password: $DOCKER_PASSWORD
       repository: sandra/hello_world
       ports: 8080
+      env: ["NEW_RELIC="$NEW_RELIC]
       cmd: java -jar /pipeline/source/build/libs/gs-spring-boot-docker.jar
