--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ jar {
 // end::jar[]
 
 // tag::dependencies[]
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 dependencies {
     compile "joda-time:joda-time:2.2"
@@ -51,7 +51,6 @@ task buildDocker(type: Docker, dependsOn: build) {
             from jar
             into stageDir
         }
-        println("$NEW_RELIC")
     }
 }
 // tag::wrapper[]
