--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'docker'
 
-group = 'weltn24'
+group = 'sandra'
 
 // tag::repositories[]
 repositories {
